[gd_scene load_steps=5 format=3 uid="uid://sdydv6n8gl2j"]

[ext_resource type="Texture2D" uid="uid://kd5d5b27i8x3" path="res://assets/space.png" id="1_0tmed"]
[ext_resource type="Script" path="res://effects/space_background.gd" id="1_0y7jn"]
[ext_resource type="Texture2D" uid="uid://tbsbqf3boj3d" path="res://assets/far_stars.png" id="2_lyoq6"]
[ext_resource type="Texture2D" uid="uid://b7jspwyaas700" path="res://assets/close_stars.png" id="3_u2kcg"]

[node name="SpaceBackground" type="ParallaxBackground"]
script = ExtResource("1_0y7jn")

[node name="SpaceLayer" type="ParallaxLayer" parent="."]
unique_name_in_owner = true
motion_mirroring = Vector2(2.08165e-12, 576)

[node name="Space" type="TextureRect" parent="SpaceLayer"]
offset_right = 576.0
offset_bottom = 576.0
texture = ExtResource("1_0tmed")
stretch_mode = 1

[node name="FarStarsLayer" type="ParallaxLayer" parent="."]
unique_name_in_owner = true
motion_mirroring = Vector2(2.08165e-12, 576)

[node name="FarStars" type="TextureRect" parent="FarStarsLayer"]
offset_right = 576.0
offset_bottom = 576.0
texture = ExtResource("2_lyoq6")
stretch_mode = 1

[node name="CloseStarsLayer" type="ParallaxLayer" parent="."]
unique_name_in_owner = true
motion_mirroring = Vector2(2.08165e-12, 576)

[node name="CloseStars" type="TextureRect" parent="CloseStarsLayer"]
offset_right = 576.0
offset_bottom = 576.0
texture = ExtResource("3_u2kcg")
stretch_mode = 1
